# kirin-npu-tools-kit

./: .gitignore  README.md  pyproject.toml
conf/: qwen25_dopt.json  qwen25_model_info_target.yaml
scripts/: gen_out.sh  qwen25-omc.sh
src/: constants.py  export_model_single_qwen2.py  quant_qwen25.py
