[project]
name = "kirin-npu-tools-kits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "onnx==1.15.0",
    "tokenizers==0.21.0",
    "torch==2.4.0",
    "transformers==4.51.0",
    "numpy==1.26.4",
    "onnxruntime==1.16.3",
    "onnxslim>=0.1.74",
    "datasets==2.19.1",
    "onnxsim==0.4.35",
    "accelerate>=1.13.0",
    "huggingface-hub>=0.36.2",
    "protobuf>=3.20.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"
